# warp

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  NOTES.md  PLAN.md  README.md  START_HERE.md  TODO.md  pyproject.toml
.codex/context/: manifest.yaml
.github/workflows/: blender-addon-release.yml  build-warp-builder-images.yml  ci.yml  codeql.yml  draft-release.yml  pr.yml  sphinx.yml
addon/: __init__.py  cache_bridge.py  operators.py  props.py  ui.py  visualization.py
backends/: __init__.py
backends/warp/: __init__.py  adapter.py
docker/warp-builder/: README.md
docs/: BACKEND_CONTRACT.md  BLENDER_INTEGRATION_BOUNDARY.md  BLENDER_MANUAL_TEST.md  BLENDER_QUICKSTART.md  MOON_BIRTH_LIMITATIONS.md  MOON_BIRTH_MODEL.md  PRESET_CONTRACT.md  RELEASING.md  RUN_DIAGNOSTICS.md  SESSION_CONTINUATION.md  SIMULATION_SPEC.md  index.rst
io/: README.md  cache_schema_v1.json
presets/: __init__.py  asteroid_belt_disruption.py  moon_birth_theia.py
scripts/: build_blender_addon_zip.py  inspect_cache.py  list_presets.py  maintenance.sh  print_simulation_spec.py  run_preset.py  scaffold_preset.py  setup.sh  validate_preset.py
sim_core/: __init__.py  app.py  cache_io.py  contracts.py  diagnostics.py  initial_conditions.py  observability.py  registry.py  runtime.py
tests/: __init__.py  test_architecture_guardrails.py  test_blender_packaging.py  test_cache_visualization_prep.py  test_initial_conditions.py  test_repo_layout.py  test_settling_and_resume.py  test_vertical_slice.py
(+3 files in other folders)
