[project]
name = "cinematic-astro-sim-addon-dev"
version = "0.2.0"
description = "Development tooling and release packaging for the Cinematic Astro Sim Blender addon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.0",
]

[tool.uv]
managed = true
package = false

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 120
indent-width = 4
extend-exclude = [
    "dist",
    ".runtime-cache",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
extraPaths = ["."]
